--- a/Vue/MainWindow.xaml
+++ b/Vue/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ImageBrush ImageSource="Images/logo_exia.jpg" Opacity="0.15" Stretch="Uniform"/>
         </Grid.Background>
         <Label x:Name="label" Content="Bienvenue dans Proxar !" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Top" FontFamily="Cooper Black" FontSize="20" Foreground="Crimson"/>
-        <Button x:Name="ConnexionButton" Content="Connexion" HorizontalAlignment="Center" Margin="0,135,0,0" VerticalAlignment="Top" Width="75" FontFamily="Cooper Black" Foreground="Crimson">
+        <Button x:Name="ConnexionButton" Content="Connexion" HorizontalAlignment="Center" Margin="0,135,0,0" VerticalAlignment="Top" Width="75" FontFamily="Cooper Black" Foreground="Crimson" Click="ConnexionButton_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0,1" Opacity="0.3" StartPoint="0,0">
                     <GradientStop Color="#FFF3F3F3" Offset="0"/>
@@ -21,7 +21,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="Inscription" Content="Inscription" HorizontalAlignment="Center" Margin="0,200,0,0" VerticalAlignment="Top" Width="75" FontFamily="Cooper Black" Foreground="Crimson">
+        <Button x:Name="Inscription" Content="Inscription" HorizontalAlignment="Center" Margin="0,200,0,0" VerticalAlignment="Top" Width="75" FontFamily="Cooper Black" Foreground="Crimson" Click="Inscription_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0,1" Opacity="0.3" StartPoint="0,0">
                     <GradientStop Color="#FFF3F3F3" Offset="0"/>
